Mon Dec 14 01:39:28 1998  Jeffrey A Law  (law@cygnus.com)

	* rtl.h (multiple_sets): Fix prototype.
	* rtlanal.c (multiple_sets): Fix return type.

Sun Dec 13 12:43:58 PST 1998 Jeff Law  (law@cygnus.com)

	* version.c: Bump for snapshot.

Sun Dec 13 01:05:22 PST 1998 Jeff Law  (law@cygnus.com)

	* version.c: Bump for snapshot.

1998-12-13  Manfred Hollstein  <manfred@s-direktnet.de>

	* protoize.c (fputs): Wrap extern declaration in #ifndef fputs.

Sun Dec 13 00:24:14 1998  J"orn Rennecke <amylaar@cygnus.co.uk>

	* rtl.h (recompute_reg_usage): Add second argument.
	* flow.c (recompute_reg_usage): Likewise.
	* toplev.c (rest_of_compilation): Supply second argument to
	recompute_reg_usage.

	* reload1.c (compute_use_by_pseudos): Allow reg_renumber[regno] < 0
	after reload.

Sat Dec 12 23:39:10 1998  Jeffrey A Law  (law@cygnus.com)

	* m68k/t-m68kelf (MULTILIB_OPTIONS): Add mcpu32.
	(MULTILIB_MATCHES): -m68332 now uses mcpu32 libraries, not m68000.
	(MULTILIB_EXCEPTIONS): Don't build 68881 libraries for m68000,
	mcpu32 or m5200.

	* i386/next.h (ASM_OUTPUT_ALIGN): Use 0x90 for fill character.

	* rtlanal.c (multiple_sets): New function.
	* rtl.h (multiple_sets): Declare it.
	* local-alloc.c (wipe_dead_reg): Use it.
	* global.c (global_conflicts): Likewise.

Sat Dec 12 22:13:02 1998  Mark Mitchell  <mark@markmitchell.com>

	* global.c (record_conflicts): Don't use an array of shorts to
        store an array of ints.
	(global_conflicts): Likewise.

Sat Dec 12 16:49:24 1998  Richard Henderson  <rth@cygnus.com>

	* alpha.c (alpha_expand_block_move): mode_for_size expects
	bits, not bytes.  Infer extra alignment from addressof.

1998-12-11  Michael Meissner  <meissner@cygnus.com>

	* rs6000/sysv4.h (ASM_OUTPUT_ALIGNED_LOCAL): Put small data in the
	.sbss section, not .sdata.

1998-12-11  Manfred Hollstein  <manfred@s-direktnet.de>

	* cccp.c: Do not #include <sys/stat.h> here; this is already done
	by "system.h".
	* collect2.c: Likewise.
	* cpplib.h: Likewise.